// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegationsOverview shows a sentiment of dissatisfaction when you have no such delegations 1`] = `
<div
  class="delegations-overview"
>
  <div
    class="table-container"
  >
    <div>
      <h1>
        Your Stake
      </h1>
       
      <balancerow-stub
        balance="[object Object]"
        totalrewardsperdenom="[object Object]"
      />
       
      <!---->
    </div>
     
    <tmdatamsg-stub
      icon="sentiment_dissatisfied"
      iconcolor="var(--warning)"
    >
      <div>
        No validators in your portfolio
      </div>
       
      <div>
        
        Head over to the
        
        <a>
          validator list
        </a>
         to
        start earning rewards!
      
      </div>
    </tmdatamsg-stub>
     
    <undelegationmodal-stub
      sourcevalidator="[object Object]"
    />
  </div>
</div>
`;

exports[`DelegationsOverview shows an overview over all delegations of the user 1`] = `
<div
  class="delegations-overview"
>
  <div
    class="table-container"
  >
    <div>
      <h1>
        Your Stake
      </h1>
       
      <balancerow-stub
        balance="[object Object]"
        totalrewardsperdenom="[object Object]"
      />
       
      <tablevalidators-stub
        class="table-validators"
        delegations="[object Object],[object Object],[object Object]"
        showonmobile="expectedReturns"
        validators="[object Object],[object Object],[object Object]"
      />
    </div>
     
    <!---->
     
    <undelegationmodal-stub
      sourcevalidator="[object Object]"
    />
  </div>
</div>
`;
